# learningCpp

./: .gitignore  CMakeLists.txt  build.sh  gcc_modules.cmake  git.sh  save.sh  setup.sh  write.sh
cmake/: Coverage.cmake  Format.cmake
modules/: CMakeLists.txt  canvas.cpp  casts.cpp  concept.cpp  modules.cpp  move_semantic.cpp  move_semantic2.cpp  my_lib.cpp  my_lib.cppm  namespaces.cpp  noexcepts.cpp  struct.cpp  try_catch.cpp
modules/classes/: CMakeLists.txt  complex.cpp  container.cpp  container.h  list_container.cpp  list_container.h  unique.cpp  vector.cpp  vector.h  vector_container.cpp
modules/concepts/: CMakeLists.txt  concept2_x.cpp  concept3_x.cpp  concept_x.cpp  concept_xx.cpp
modules/modules/: A-B.cpp  A-C.cpp  A.cpp  CMakeLists.txt
modules/operations/: CMakeLists.txt  comparison.cpp  complex.cpp  containers.cpp  hash.cpp  literals.cpp  parallel.cpp  swap.cpp  vector_x.cpp  vector_x.h  x.cpp
modules/templates/: CMakeLists.txt  deduction_guide.cpp  example_vector.cpp  if_time_compile.cpp  init_mode.cpp  limit.cpp  pair.cpp  template_args.cpp  template_func.cpp  template_func_obj.cpp  template_value.cpp  template_value_ex.cpp  vector.cpp  vector.h  vector_t.cpp  vector_t.h  vector_xx.h
modules/threads/: CMakeLists.txt  thread_pool.cpp
src/: .CMakeLists.txt.kate-swp  .clang-format  CMakeLists.txt  bootstrap.cpp  run.cpp
src/modules/: CMakeLists.txt  Vector.cpp
test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
test/mocks/: rng_mock.h
